[project]
name = "fusion-fastapi-server"
version = "1.0.0"
description = "Oracle Fusion Cloud ERP procurement tools FastAPI server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
fusion-server = "main:app"

